@@ -199,4 +199,13 @@ already knows."
   (let ((*recompile-system* (asdf:find-system name)))
     (operate-on-system-for-emacs name 'asdf:load-op)))
 
+;; Doing list-all-systems-in-central-registry might be quite slow
+;; since it accesses a file-system, so run it once at the background
+;; to initialize caches.
+(eval-when (:load-toplevel :execute)
+  (when (eql *communication-style* :spawn)
+    (spawn (lambda ()
+             (ignore-errors (list-all-systems-in-central-registry)))
+           :name "init-asdf-fs-caches")))
+
 (provide :swank-asdf)
