@@ -1,3 +1,9 @@
+2010-01-08  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-asdf.lisp: Doing list-all-systems-in-central-registry
+	might be quite slow since it accesses a file-system,
+	so run it once at the background to initialize fs caches.
+
 2010-01-06  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* swank-arglists.lisp (interesting-variable-p): Exclude keywords
